refactor(place): CodeRabbit 2차 피드백 전체 반영 (가독성 향상, 가중치 상수화, 예외 처리 및 타입 정리)